kustomize/base/netpol/allow-ingress-from-nginx.yaml
# ingress-nginx namespace'inden app namespace'e HTTP trafiği
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: platform
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        # D25: sadece gateway (8080) — diğer servisler gateway içinden K8s DNS
        - protocol: TCP
          port: 8080     # api-gateway
